--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+     <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyCn4qrti541C7efYED3IVAa_sqv1no8kgE"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
