--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,8 +3,12 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
+pod 'GoogleMaps'
+pod 'Google-Maps-iOS-Utils'
+pod 'react-native-google-maps', :path => '../node_modules/react-native-maps'
 
 target 'Rental_Management' do
+
  config = use_native_modules!
 permissions_path = '../node_modules/react-native-permissions/ios'
 pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
