--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-maps": "^0.31.1",
     "react-native-permissions": "^3.6.0",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^2.9.1",
